# openclassrooms

./: .env.example  .gitignore  AGENTS.md  AGENT_TESTING.md  DEVELOPMENT.md  MANIMATOR_EXCEPTION_GUIDE.md  Makefile  README.md  STRATEGIC_ROADMAP.md  VIDEO_CONFIG_GUIDE.md  checklist.md  main.py  manimator_pipeline  pyproject.toml  set_video_config.py  test_agents.py  test_codegen.py  test_critic.py  test_planner.py  test_render.py  test_repair.py  test_validator.py
.github/: copilot-instructions.md
amoeba/: README.md  main.py  pyproject.toml  utils.py
amoeba/core/: tick.py
amoeba/docs/: AGENTIC.md  GUIDE.md  README.md
amoeba/src/amoeba/: __init__.py  exceptions.py  observability.py  runtime.py  subprocess.py  utils.py
amoeba/src/amoeba.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
amoeba/src/amoeba/core/: agent.py  litellm_chat.py  llm.py  memory.py  responses.py  result.py  retry.py  safe_acompletion.py  tool.py
amoeba/src/amoeba/observability/: tracing.py
autolecture/: .gitignore  generated_scene.py  main.py  pyproject.toml
autolecture/manimator/: agent.py
autolecture/manimator/skills/: 01-scene-writer.md  02-storyboard-planner.md  03-manim-coder.md  04-error-handler.md  05-narration-sync.md  skills.md
autolecture/scene_decomposer/: age.py  agent.py
autolecture/scene_decomposer/tts/: __init__.py  engine.py  registry.py
autolecture/scene_decomposer/tts/providers/: example_custom.py  kitten.py
data/: README.md  pilot.jsonl
docs/: 2026-04-03-session.md  AGENTIC_IR_AND_KNOWLEDGE.md  PROJECT_FORWARD.md  README.md  finetuning_playbook.md  migration-to-subagent-pipeline.md  week3_progress.md  week4-eportfolio-logbook.html  week4-eportfolio-logbook.md
manimator/: .env.example  AGENTIC_ARCHITECTURE_GUIDE.md  README.md  __init__.py  exceptions.py  ir.py  main.py  paths.py  pyproject.toml  query_rnn.txt  runtime_env.py
manimator/agents/: codegen.py  critic.py  intent_classifier.py  json_llm.py  llm_response.py  planner.py  repair.py  scene_decomposer.py  scene_subagent.py  validator.py
manimator/audio/: __init__.py  kitten_tts.py  mux.py  narration.py  tts_config.py  voiceover.py
manimator/batch/: README.md  __init__.py  cache_meta.py  export.py  fingerprint.py  ir_load.py  manifest.py  querygen.py  runner.py  seed_topics.py  stages.py  state_merge.py
manimator/config/: video_config.py
manimator/contracts/: __init__.py  critic.py  intent.py  llm_outputs.py  scene_plan.py  scene_spec.py  validation.py
manimator/docs/ir/: README.md  SCHEMAS.md
manimator/docs/kg/: DEPLOYMENT.md  ONTOLOGY.md  README.md  REASONING.md  TEACHING_PLAN_IR.md
manimator/logging/: __init__.py  logger.py
manimator/manim_utils/: __init__.py
manimator/manimator.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
manimator/observability/: __init__.py  metrics.py
manimator/pipeline/: __init__.py  export_graph_png.py  graph.py  state.py
manimator/prompts/: __init__.py  registry.py  types.py
manimator/prompts/code_repair/: __init__.py  v1.py
manimator/prompts/intent_classifier/: __init__.py  v1.py  v2.py
manimator/prompts/scene_decomposer/: __init__.py  v1.py
manimator/prompts/scene_planner/: __init__.py  v1.py
manimator/tests/: test_pipeline.py
manimator/tests/agents/: test_intent_classifier.py  test_stubs.py
manimator/tests/audio/: test_voiceover.py
manimator/tests/batch/: test_cache_meta.py  test_export.py  test_fingerprint.py  test_ir_load.py  test_manifest.py  test_querygen.py  test_state_merge.py
manimator/tests/contracts/: test_critic.py  test_intent.py  test_scene_plan.py  test_scene_spec.py  test_validation.py
manimator/tests/fixtures/ir_full/: critic_result.json  generated_codes.json  intent.json  rendered_paths.json  run_summary.json  scene_plan.json  scene_specs.json  validation_results.json
manimator/tests/fixtures/ir_minimal/: intent.json  run_summary.json
manimator/tests/prompts/: test_intent_classifier_cases.py
manimator/video/: __init__.py  delivery.py
media/Tex/: 0034e7a20a328983.tex  022cdcb063879e57.tex  03952cd43ff72ca7.tex  0458e84fef9d3e0d.tex  048b3d96026b2ea9.tex  0587c37f735c952c.tex  06064bf3c42345d9.tex  072159d24bf85238.tex  092779ba1e82b54d.tex  095fedf716e1570f.tex  0c4840e108336d24.tex  0c81ce29fa7f257a.tex  0ca9506d0244c367.tex  0d949010de915b1a.tex  0e2df9cff8025e0f.tex  0faf1c22396125c3.tex  1030ada6ef53af5b.tex  105c710334d2289a.tex  112d6708bdfa17b4.tex  11e0d7acfbbfbda1.tex  128f19d49298a49d.tex  148c628c12a07798.tex  15ce1057934a8f87.tex  1603fd1711c776b4.tex  1697e215ec1f1554.tex  1831adf7b22028e4.tex  184f2be0f42b93ca.tex  185df1e2e8d5ee41.tex  1949df876e785797.tex  1c080c2778a0a361.tex  1c3ab8eaee9cde4b.tex  1c6f553bf200e64b.tex  1cbca6a5f1f1b305.tex  1cbe6a00a34cb034.tex  1dfae7a5839d1ee8.tex  1e8986232eb40462.tex  1eb835d39cf22889.tex  1ed9f40f0f56cac3.tex  1f7639ac17ee9bd3.tex  20a7fcea65c1649d.tex  (+223 more)
openclassrooms/: __init__.py
outputs/: debug-d91956.ndjson
outputs/batches/dataset_2k_v1/: batch_manifest.json  progress.jsonl
webapp/: .sesskey  khan.db  khan.db-shm  khan.db-wal  main.py  pyproject.toml
(+57 files in other folders)
