[project]
name = "openclassrooms"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "graphviz>=0.21",
    "ipython>=9.12.0",
    "langgraph>=1.1.3",
    "pydantic>=2.12.5",
]

[tool.uv.workspace]
members = [
    "manimator",
]
