[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "openclassrooms"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "graphviz>=0.21",
    "ipython>=9.12.0",
    "langgraph>=1.1.3",
    "pydantic>=2.12.5",
]

# Root is a metapackage only — never auto-discover sibling dirs (manimator/, outputs/, …).
[tool.setuptools]
packages = ["openclassrooms"]

[tool.uv.workspace]
members = [
    "manimator",
    "webapp",
    "amoeba",
    "autolecture",
]
