[project]
name = "manimator"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
packages = ["manimator"]
dependencies = [
    "litellm>=1.82.6",
    "pydantic>=2.12.5",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "python-dotenv>=1.2.2",
    "langgraph>=0.2.0",
    "langchain-core>=0.3.0",
    "manim>=0.18.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
