[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "manimator"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "amoeba",
    "litellm>=1.82.6",
    "pydantic>=2.12.5",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "python-dotenv>=1.2.2",
    "langgraph>=0.2.0",
    "langchain-core>=0.3.0",
    "manim>=0.18.0",
]

[project.optional-dependencies]
tts = [
    "kittentts",
]

[tool.uv.sources]
amoeba = { workspace = true }
kittentts = { url = "https://github.com/KittenML/KittenTTS/releases/download/0.8.1/kittentts-0.8.1-py3-none-any.whl" }

[tool.pytest.ini_options]
asyncio_mode = "auto"

# Imports are manimator.* but sources live at repo root (agents/, pipeline/, …).
[tool.setuptools.package-dir]
"manimator" = "."

[tool.setuptools]
packages = [
    "manimator",
    "manimator.agents",
    "manimator.audio",
    "manimator.config",
    "manimator.contracts",
    "manimator.logging",
    "manimator.manim_utils",
    "manimator.pipeline",
    "manimator.prompts",
    "manimator.prompts.scene_decomposer",
    "manimator.prompts.scene_planner",
    "manimator.prompts.code_repair",
    "manimator.prompts.intent_classifier",
    "manimator.tests",
    "manimator.tests.agents",
    "manimator.tests.audio",
    "manimator.tests.contracts",
    "manimator.tests.prompts",
    "manimator.video",
    "manimator.observability",
]
